<resources>
    <string name="app_name">Me Adote</string>
    <string name="error_email_not_valid">email not valid</string>
    <string name="error_password_not_valid">Password not valid</string>
    <string name="error_user_not_found">User not found!</string>

    <string name="login_edit_email">Email</string>
    <string name="login_edit_password">Password</string>
    <string name="login_button_login">Login</string>
    <string name="timeline_pet_image">pet image</string>
    <string name="demonstration_name">Name</string>
    <string name="demonstration_loren_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eleifend dolor in purus consequat dictum. Morbi sed dui vel metus.</string>
    <string name="action_add_pet">add pet</string>
    <string name="demonstration_weight">2Kg</string>
    <string name="demonstration_date">2 year</string>
    <string name="demonstration_breed">Rottweiler</string>
    <string name="item_timeline_weight">Weight</string>
    <string name="item_timeline_age">Age</string>
    <string name="item_timeline_breed">Breed</string>
    <string name="demonstration_owner_name">Owner Name</string>
    <string name="item_timeline_image_profile">image profile</string>
    <string name="msg_a_few_weeks">A few weeks</string>
    <string name="msg_month">month</string>
    <string name="msg_months">months</string>
    <string name="msg_year">year</string>
    <string name="msg_years">years</string>
    <string name="add_edit_pet_name">Name</string>
    <string name="add_edit_pet_overview">Overview</string>
    <string name="add_edit_pet_breed">Breed</string>
    <string name="add_edit_pet_date_birth">Date Birth</string>
    <string name="add_edit_pet_adopted">Adopted</string>
    <string name="add_edit_pet_info">Info</string>
    <string name="add_edit_pet_weight">Weight</string>
    <string name="add_edit_pet_height">Height</string>
    <string name="add_edit_pet_additional_health_notes">Additional health notes</string>
    <string name="add_edit_pet_notes">Notes</string>
    <string name="add_edit_pet_measures">Measures</string>
    <string name="add_edit_pet_image_pet">image pet</string>
    <string name="action_save">Save</string>
    <string name="error_saving_image">Error saving image!</string>
    <string name="permission_take_picture_title">Permission Warning</string>
    <string name="permission_take_picture_message">Permission of camera and writing is required</string>
    <string name="permission_take_picture_action">Ok</string>
    <string-array name="gender">
        <item>Gender</item>
        <item value="0" >Male</item>
        <item >Female</item>
    </string-array>
</resources>
