<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wnascimento.com.me_adote_mob.presentation.addeditpet.AddEditPetActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/partial_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="114dp"
                tools:layout_editor_absoluteX="113dp"
                tools:layout_editor_absoluteY="0dp" />

            <ImageView
                android:id="@+id/image_pet"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/add_edit_pet_image_pet"
                app:layout_constraintBottom_toBottomOf="@+id/text_input_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_input_name"
                app:srcCompat="@drawable/ic_add_a_photo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_pet_name" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/view_overview"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_name"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_overview"
                style="@style/TitleGroupStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_edit_pet_overview"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_overview" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_breed"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/view_overview">

                <EditText
                    android:id="@+id/edit_breed"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_pet_breed" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_date_birth"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_breed">

                <EditText
                    android:id="@+id/edit_date_birth"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_pet_date_birth"
                    android:inputType="date" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_adopted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_edit_pet_adopted"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/secondary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_date_birth" />

            <View
                android:id="@+id/view_info"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_adopted"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_info"
                style="@style/TitleGroupStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_edit_pet_info"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_info" />

            <Spinner
                android:id="@+id/spinner_gender"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/view_info" />

            <View
                android:id="@+id/view_measures"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_measures"
                style="@style/TitleGroupStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_edit_pet_measures"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_measures" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_weight"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/view_measures">

                <EditText
                    android:id="@+id/edit_weight"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:hint="@string/add_edit_pet_weight"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_height"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/text_input_weight">

                <EditText
                    android:id="@+id/edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_pet_height"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/view_notes"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="32dp"
                android:background="@color/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_height"
                tools:ignore="MissingConstraints" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_notes"
                style="@style/TextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/view_notes"
                app:layout_constraintVertical_bias="1.0">

                <EditText
                    android:id="@+id/edit_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_pet_additional_health_notes"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_notes"
                style="@style/TitleGroupStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_edit_pet_notes"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_notes" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</LinearLayout>